# interv-tasks

./: README.md
Task-140426/: .env.example  .gcloudignore  Dockerfile  docker-compose.yml
Task-140426/backend/: README.md  pyproject.toml
Task-140426/backend/app/: app.py  auth.py
Task-140426/backend/app/approach1_rag/: answer_generator.py  confidence_scorer.py  context_builder.py  pipeline.py  retriever.py
Task-140426/backend/app/approach2_agents/: orchestrator.py
Task-140426/backend/app/approach2_agents/tools/: query_restructure_tool.py  relevance_validator_tool.py  vector_search_tool.py
Task-140426/backend/app/shared/: config.py  embedder.py  pdf_parser.py  topic_extractor.py  vector_store.py
